tests/snapshots/analytics__analytics_champions.snap
---
source: tests/analytics.rs
expression: redact(body.clone())
---
{
  "champions": [
    {
      "avgDamage": 13112,
      "avgKda": 1.6667,
      "avgVision": 29,
      "banRate": 0,
      "championId": 34,
      "csPerMin": 6.956,
      "games": 1,
      "goldPerMin": 340.6302,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 0,
      "wins": 0
    },
    {
      "avgDamage": 19547,
      "avgKda": 4.5,
      "avgVision": 67,
      "banRate": 0,
      "championId": 76,
      "csPerMin": 6.2426,
      "games": 1,
      "goldPerMin": 484.2093,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 0,
      "wins": 0
    },
    {
      "avgDamage": 20834,
      "avgKda": 3.5,
      "avgVision": 49,
      "banRate": 0,
      "championId": 126,
      "csPerMin": 9.5244,
      "games": 1,
      "goldPerMin": 524.4471,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 1,
      "wins": 1
    },
    {
      "avgDamage": 36696,
      "avgKda": 3.6667,
      "avgVision": 33,
      "banRate": 0,
      "championId": 134,
      "csPerMin": 7.3484,
      "games": 1,
      "goldPerMin": 476.5755,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 1,
      "wins": 1
    },
    {
      "avgDamage": 18693,
      "avgKda": 1.2222,
      "avgVision": 22,
      "banRate": 0,
      "championId": 157,
      "csPerMin": 6.956,
      "games": 1,
      "goldPerMin": 421.0345,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 0,
      "wins": 0
    },
    {
      "avgDamage": 4811,
      "avgKda": 4.25,
      "avgVision": 97,
      "banRate": 0,
      "championId": 201,
      "csPerMin": 0.8561,
      "games": 1,
      "goldPerMin": 277.9905,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 0,
      "wins": 0
    },
    {
      "avgDamage": 24759,
      "avgKda": 1.6667,
      "avgVision": 15,
      "banRate": 0,
      "championId": 236,
      "csPerMin": 7.9548,
      "games": 1,
      "goldPerMin": 546.9917,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 0,
      "wins": 0
    },
    {
      "avgDamage": 21335,
      "avgKda": 2.8,
      "avgVision": 38,
      "banRate": 0,
      "championId": 246,
      "csPerMin": 7.6694,
      "games": 1,
      "goldPerMin": 491.9144,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 1,
      "wins": 1
    },
    {
      "avgDamage": 26845,
      "avgKda": 1.6667,
      "avgVision": 31,
      "banRate": 0,
      "championId": 429,
      "csPerMin": 7.2771,
      "games": 1,
      "goldPerMin": 491.0226,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 1,
      "wins": 1
    },
    {
      "avgDamage": 18864,
      "avgKda": 3,
      "avgVision": 98,
      "banRate": 0,
      "championId": 518,
      "csPerMin": 1.0702,
      "games": 1,
      "goldPerMin": 364.4233,
      "patch": "16.19",
      "pickRate": 1,
      "share": 0.1,
      "tier": "MASTER",
      "winRate": 1,
      "wins": 1
    }
  ],
  "computedAt": "<iso>",
  "patch": "16.19",
  "platform": "kr",
  "queue": "RANKED_SOLO_5x5",
  "role": null,
  "tier": null,
  "totalGames": 10
}
